<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="activity"
            type="com.zhalz.voyageoflife.ui.login.LoginActivity" />

        <variable
            name="viewmodel"
            type="com.zhalz.voyageoflife.ui.login.LoginViewModel" />

        <variable
            name="isLoading"
            type="Boolean" />

        <import type="android.view.View" />

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/anim_loading"
            style="@style/LoadingScreen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blurry"
            android:padding="100dp"
            android:visibility="@{isLoading ? View.VISIBLE : View.GONE}" />

        <LinearLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blue"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:fitsSystemWindows="true"
                android:src="@drawable/boat_sea"
                tools:ignore="ImageContrastCheck" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:background="@drawable/bg_round_top_left"
                android:orientation="vertical"
                android:paddingHorizontal="24dp"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="48dp"
                    android:alpha="0"
                    android:gravity="center"
                    android:text="@string/welcome_back"
                    android:textColor="@color/blue"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    tools:alpha="100" />

                <!-- EMAIL -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edl_login_email"
                    style="@style/CustomEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0"
                    android:hint="@string/email"
                    app:startIconDrawable="@drawable/ic_email"
                    tools:alpha="100">

                    <com.zhalz.voyageoflife.ui.customview.TextInputEmail
                        android:id="@+id/ed_login_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha="0"
                        android:enabled="@{isLoading ? false : true}"
                        android:inputType="textEmailAddress"
                        android:text="@={viewmodel.email}"
                        tools:alpha="100"
                        tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Password -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edl_login_password"
                    style="@style/CustomEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0"
                    android:hint="@string/password"
                    app:endIconMode="password_toggle"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/ic_lock"
                    tools:alpha="100">

                    <com.zhalz.voyageoflife.ui.customview.TextInputPassword
                        android:id="@+id/ed_login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha="0"
                        android:enabled="@{isLoading ? false : true}"
                        android:inputType="textPassword"
                        android:text="@={viewmodel.password}"
                        tools:alpha="100"
                        tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_login"
                    style="@style/CustomButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:alpha="0"
                    android:enabled="@{isLoading ? false : true}"
                    android:onClick="@{() -> viewmodel.login()}"
                    android:text="@string/login"
                    android:textColor="@color/smooth"
                    tools:alpha="100"
                    tools:ignore="VisualLintButtonSize" />

                <LinearLayout
                    android:id="@+id/linear_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0"
                    android:gravity="center"
                    android:orientation="horizontal"
                    tools:alpha="100">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/doesnt_have_an_account"
                        android:textColor="@color/black" />

                    <Button
                        style="@style/Widget.Material3.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:enabled="@{isLoading ? false : true}"
                        android:onClick="@{() -> activity.toRegister()}"
                        android:text="@string/register"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        tools:ignore="VisualLintButtonSize" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</layout>