...
    <string name="msg_welcome">Known the tales of other\'s voyage through life.</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="create_account">Create Account</string>
    <string name="doesnt_have_an_account">Doesn\'t have an account?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="action_positive">YES</string>
    <string name="action_negative">NO</string>
    <string name="action_neutral">CANCEL</string>
    <string name="retry">Retry</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
...
